--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
 	<head>
 
-		<base href="/">
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<title>AngularJS Boilerplate</title>
@@ -42,7 +41,7 @@
 		<main-nav></main-nav>
 
 		<!-- Main view for templates -->
-		<div data-ng-view="" class="container"></div>
+		<div data-ng-view="" class="container" style="width: 100%; height: 100%;"></div>
 
 	</body>
 
@@ -50,7 +49,7 @@
 	<!-- build:nonangularlibs js/nonangularlibs.js -->
 	<script type="text/javascript" src="js/nonangular/jquery-1.11.2.min.js"></script>
 	<!-- endbuild -->
-	<script src="http://maps.google.com/maps/api/js"></script>
+	<script src="//maps.google.com/maps/api/js?key=AIzaSyB3Co54ALiKp_DsP7HteFP1I6b72JNY-YQ"></script>
 
 	<!-- Non-angular libraries -->
 	<!-- build:libs js/libs.js -->
@@ -64,9 +63,9 @@
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 	<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 	<script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-	<script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
-	<script src="bower_components/angular-mqtt/src/browserMqtt.js"></script>
-	<script src="bower_components/angular-mqtt/src/angular-MQTT.js"></script>
+	<script type="text/javascript" src="bower_components/ngmap/build/scripts/ng-map.js"></script>
+	<script type="text/javascript" src="bower_components/angular-mqtt/src/browserMqtt.js"></script>
+	<script type="text/javascript" src="bower_components/angular-mqtt/src/angular-MQTT.js"></script>
 	<!-- endbuild -->
 
 	<!-- Angular components -->
@@ -75,9 +74,6 @@
 	<script type="text/javascript" src="app/config.js"></script>
 	<script type="text/javascript" src="components/services/LocalStorage.service.js"></script>
 	<script type="text/javascript" src="components/services/queryService.service.js"></script>
-	<script type="text/javascript" src="components/directives/main.nav.directive.js"></script>
-	<script type="text/javascript" src="components/directives/responsive.nav.directive.js"></script>
-	<script type="text/javascript" src="components/directives/owl.slider.directive.js"></script>
 	<!-- endbuild -->
 
 	<!-- Application sections -->
@@ -90,14 +86,4 @@
 	<!-- build:templates -->
 	<!-- endbuild -->
 	
-	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-	<script>
-	    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-	    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-	    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-	    e.src='https://www.google-analytics.com/analytics.js';
-	    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-	    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-	</script>
-
 </html>
